--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -8,17 +8,22 @@
   box-sizing: border-box;
 }
 
-html {
-  background: $background-gradient;
+html,
+body {
+  background: var(--bg);
+  color: var(--text);
   overflow-x: hidden;
   scroll-behavior: smooth;
+  position: relative;
+  touch-action: pan-y;
+  width: 100%;
+  overscroll-behavior-x: none;
 
   h1 {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    padding: calc($regular-spacing * 0.75) $regular-spacing;
 
     font-family: $font-headings-family;
     font-weight: $font-headings-weight;
@@ -89,7 +94,8 @@ html {
   }
 
   .emphasis {
-    color: $emphasis-color;
+    color: var(accent);
+    -webkit-text-fill-color: var(--accent);
   }
 
   .sr-only {
@@ -183,6 +189,16 @@ html {
       width: $tablet;
     }
 
+    @include m.respond(mobile) {
+      width: $mobile-sm;
+
+      tr,
+      td {
+        display: block;
+        width: 100%;
+      }
+    }
+
     .event-info {
       border-bottom: 1px solid white;
 
@@ -191,6 +207,10 @@ html {
         flex-direction: column;
         padding-bottom: 10%;
         padding-top: 10%;
+
+        @include m.respond(mobile) {
+          padding-bottom: 3%;
+        }
 
         .weekday {
           font-family: $font-regular-family;
@@ -243,7 +263,7 @@ html {
         font-size: $font-regular-size;
         font-weight: $font-regular-weight;
         color: $font-regular-color;
-        padding-left: 10%;
+        padding-left: 7.5%;
 
         @include m.respond(desktopS) {
           font-size: $font-regular-size-desktopS;
@@ -259,6 +279,7 @@ html {
 
         @include m.respond(mobile) {
           font-size: $font-regular-size-mobile;
+          padding: 0 0 5% 0;
         }
       }
     }
