--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,5 +1,5 @@
-@use '../scss/mixins' as m;
-@use '../scss/variables' as *;
+@use './mixins' as m;
+@use './variables' as *;
 
 footer {
   display: flex;
