fixed background size in hero section

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -12,7 +12,8 @@
 
   background-image: url('/src/img/gruppenbild_hoaschoaf.png');
   background-repeat: no-repeat;
-  background-position: center bottom;
+  background-position: center;
+  background-size: contain;
 
   @include m.respond(mobile) {
     background-size: 115vw;
